--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
     <header class="banner">
         <div class="banner-content">
             <div class="left">
-                <h2>Quiz Website</h2>
+                <h2>호퀴즈</h2>
             </div>
             <div class="right">
                 <span class="level">Level: 1</span>
