--- a/main.html
+++ b/main.html
@@ -13,7 +13,8 @@
     <header class="banner">
         <div class="banner-content">
             <div class="left">
-                <h2>Quiz Website</h2>
+                <img src="quiz.jpg" alt="퀴즈이미지" class="logo">
+                <h2>호퀴즈</h2>
             </div>
             <div class="right">
                 <span class="level">Level: 1</span>
