--- a/mypage.html
+++ b/mypage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Page</title>
+    <title>My Page</title>`
     <link rel="stylesheet" href="mypage.css">
 </head>
 
@@ -12,7 +12,7 @@
     <header class="banner">
         <div class="banner-content">
             <div class="left">
-                <h2>Quiz Website</h2>
+                <h2>호퀴즈</h2>
             </div>
             <div class="right">
                 <span class="level">Level: 1</span>
