fix:quiz.html수정

--- a/quiz.html
+++ b/quiz.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IT 관련 퀴즈</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="quiz.css">
     <script src="quiz.js" defer></script>
 </head>
 
@@ -27,7 +27,7 @@
         <div id="options" class="options-container">
             <!-- 선택지가 여기에 동적으로 들어갑니다. -->
         </div>
-        <button id="next-button" class="quiz-button">다음 문제</button>
+        <button id="next-button" class="quiz-button1">다음 문제</button>
     </div>
 </body>
 
